--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Վահե և Նարինե">
     <meta property="og:description" content="Սիրով հրավիրում ենք Ձեզ մեր հարսանիքին։ Հրավիրատոմսը՝ այս հղումով">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/main-image.JPG">
+    <meta property="og:image" content="images/main-image.jpg">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <script type="text/javascript" async="" id="tildastatscript" src="./Vahe_Narine_files/tilda-stat-1.0.min.js.download"></script>
@@ -3179,8 +3179,8 @@
         </div>
     </header><!--/header-->
     <div id="rec581847405" class="r t-rec t-screenmin-980px" style=" " data-animationappear="off" data-record-type="415" data-screen-min="980px"><!-- t415 --><!-- cover -->
-        <div class="t-cover" id="recorddiv581847405" bgimgfield="img" style="background-image: url(&quot;images/main-image.JPG&quot;); height: 657px;">
-            <div class="t-cover__carrier loaded" id="coverCarry581847405" data-content-cover-id="581847405" data-display-changed="true" data-content-cover-height="90vh" data-content-cover-parallax="fixed" style="height: 657px; background-image: url(&quot;images/main-image.JPG&quot;);" role="img" data-content-cover-updated-height="657px">
+        <div class="t-cover" id="recorddiv581847405" bgimgfield="img" style="background-image: url(&quot;images/main-image.jpg&quot;); height: 657px;">
+            <div class="t-cover__carrier loaded" id="coverCarry581847405" data-content-cover-id="581847405" data-display-changed="true" data-content-cover-height="90vh" data-content-cover-parallax="fixed" style="height: 657px; background-image: url(&quot;images/main-image.jpg&quot;);" role="img" data-content-cover-updated-height="657px">
             </div>
             <div class="t-cover__filter" style="height: 657px; background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));"></div>
             <div class="t415">
