--- a/index.html
+++ b/index.html
@@ -3306,8 +3306,8 @@
         }</style>
     </div>
     <div id="rec581847406" class="r t-rec t-screenmin-980px" style=" " data-animationappear="off" data-record-type="18" data-screen-min="980px"><!-- cover -->
-        <div class="t-cover" id="recorddiv581847406" bgimgfield="img" style="background-image: url(&quot;images/main-image.JPG&quot;); height: 73px;">
-            <div class="t-cover__carrier loaded" id="coverCarry581847406" data-content-cover-id="581847406" data-display-changed="true" data-content-cover-height="10vh" data-content-cover-parallax="fixed" style="height: 73px; background-image: url(&quot;images/main-images.JPG&quot;);" itemscope="" itemtype="http://schema.org/ImageObject">
+        <div class="t-cover" id="recorddiv581847406" bgimgfield="img" style="background-image: url(&quot;images/main-image.jpg&quot;); height: 73px;">
+            <div class="t-cover__carrier loaded" id="coverCarry581847406" data-content-cover-id="581847406" data-display-changed="true" data-content-cover-height="10vh" data-content-cover-parallax="fixed" style="height: 73px; background-image: url(&quot;images/main-image.jpg&quot;);" itemscope="" itemtype="http://schema.org/ImageObject">
             </div>
             <div class="t-cover__filter" style="height: 73px; background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));"></div>
             <div class="t-container">
